nghich promise, async

--- a/src/promise.html
+++ b/src/promise.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>
-    <%= htmlWebpackPlugin.options.title %>
+    Salvo Core
   </title>
 
   <meta name="description" content="<%= htmlWebpackPlugin.options.title %>">
@@ -23,8 +23,12 @@
   <ol>
     <li>
       <a href="index.html">Index</a>
+      <button type="button" onclick="abc()">Change Content</button>
     </li>
   </ol>
+  <script src="../dist/promise.js"></script>
+<p id="p"></p>
+
 </body>
 
 </html>
